[ci skip] Install altair on pyodide a18f30beca85b7b1d148568fe777d7502bc7a565

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e7526d69",
+   "id": "0a581176",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,20 +19,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a9b90c1",
+   "id": "67ca0bbe",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "outputs": [],
    "source": [
     "%pip install -q https://pypi.anaconda.org/ogrisel/simple/polars/1.24.0/polars-1.24.0-cp39-abi3-emscripten_3_1_58_wasm32.whl\n",
-    "%pip install -q holidays https://pypi.anaconda.org/ogrisel/simple/skrub/0.6.dev0/skrub-0.6.dev0-py3-none-any.whl"
+    "%pip install -q altair holidays https://pypi.anaconda.org/ogrisel/simple/skrub/0.6.dev0/skrub-0.6.dev0-py3-none-any.whl"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81a68729",
+   "id": "c9746fa9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34a457dd",
+   "id": "760a6686",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7534eda",
+   "id": "0b33c0a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2568f643",
+   "id": "bc69e4d0",
    "metadata": {},
    "source": [
     "\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c920667b",
+   "id": "523e634d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d605aa",
+   "id": "2789d35d",
    "metadata": {},
    "source": [
     "\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05dbf002",
+   "id": "1e84ef10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b6896a0",
+   "id": "c9eabbfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "761c6dfd",
+   "id": "a737d235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f71d5654",
+   "id": "285faaf5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccf2a241",
+   "id": "14fab96c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73f2d8ba",
+   "id": "7374dc35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97e5287b",
+   "id": "38229c36",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfa34913",
+   "id": "b3484ca7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "733159cd",
+   "id": "5b8e6984",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c93e3089",
+   "id": "f71d3cb0",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ca718e8",
+   "id": "9d0a0c3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97f36479",
+   "id": "7492487c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf86e5d0",
+   "id": "c58fda7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3207a58",
+   "id": "e2e216fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1b5b1b6",
+   "id": "a97c0a6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c71b20a",
+   "id": "8006de76",
    "metadata": {},
    "source": [
     "\n",
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9165f9e",
+   "id": "1cc90932",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "380143c1",
+   "id": "5d28dd60",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "351377df",
+   "id": "ba90d025",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1a3179b",
+   "id": "e135c6fe",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "636096c0",
+   "id": "221fc0d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "839b2078",
+   "id": "3fa35e38",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2be5915",
+   "id": "399950d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a92bbc8",
+   "id": "30d656bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d0b3c97",
+   "id": "a654a551",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "770a656e",
+   "id": "21840c10",
    "metadata": {},
    "outputs": [],
    "source": []
