--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9e7c9aa7",
+   "id": "93dbd685",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -19,20 +19,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "524c1b59",
+   "id": "b9bf97b0",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "outputs": [],
    "source": [
     "%pip install -q https://pypi.anaconda.org/ogrisel/simple/polars/1.24.0/polars-1.24.0-cp39-abi3-emscripten_3_1_58_wasm32.whl\n",
-    "%pip install -q holidays https://pypi.anaconda.org/ogrisel/simple/skrub/0.6.dev0/skrub-0.6.dev0-py3-none-any.whl"
+    "%pip install -q altair holidays https://pypi.anaconda.org/ogrisel/simple/skrub/0.6.dev0/skrub-0.6.dev0-py3-none-any.whl"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6d39539",
+   "id": "b1d744a8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95e16026",
+   "id": "fe0a58bf",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4150b5f",
+   "id": "1486492c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8654ef1",
+   "id": "8ae87f23",
    "metadata": {},
    "source": [
     "\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a85290ba",
+   "id": "9caa2f77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1aa3a31",
+   "id": "d0277ff6",
    "metadata": {},
    "source": [
     "\n",
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbee2187",
+   "id": "7e1b4100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c96dda6f",
+   "id": "c6e22064",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9005c5f7",
+   "id": "cee0a963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2622385e",
+   "id": "682f9dd6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31f42aee",
+   "id": "b4f4ed44",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7cbc690",
+   "id": "c9686547",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c0a3ffe",
+   "id": "8f267586",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3551f2fc",
+   "id": "6ce76254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a878584d",
+   "id": "3a2a8a02",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73042417",
+   "id": "b115686b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "427cf585",
+   "id": "d9498289",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03aaedf4",
+   "id": "fd2a2f40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abbbb5ab",
+   "id": "208295dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0427e908",
+   "id": "186a369d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eb7313d",
+   "id": "c688ec4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f95dc22",
+   "id": "f8752c5c",
    "metadata": {},
    "source": [
     "\n",
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f62827ed",
+   "id": "4383ee44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f75aa60",
+   "id": "db1dc6f4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df930a43",
+   "id": "456118b5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d936b4a3",
+   "id": "73908b25",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d26e9915",
+   "id": "be80ea57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bef1522",
+   "id": "974b8f8b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e64a2065",
+   "id": "935c9716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "545b7dd1",
+   "id": "27f24d66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "968a6c81",
+   "id": "4657ec15",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d175d379",
+   "id": "84ed8c45",
    "metadata": {},
    "outputs": [],
    "source": []
