[ci skip] Intro paragraph to feature engineering notebook 2ffd4846d0cd18493480db300d4cc462964dcc95

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,12 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "72917307",
+   "id": "71ac5566",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "source": [
     "# Feature engineering for electricity load forecasting\n",
+    "\n",
+    "The purpose of this notebook is to demonstrate how to use `skrub` and `polars`\n",
+    "to perform feature engineering for electricity load forecasting.\n",
+    "\n",
+    "We will build a set of features from different sources:\n",
+    "\n",
+    "- Historical weather data for 10 medium to large urban areas in France;\n",
+    "- Holidays and calendar features for France;\n",
+    "- Historical electricity load data for the whole of France.\n",
+    "\n",
+    "All these data sources cover a time range from March 23, 2021 to May 31, 2025.\n",
+    "\n",
+    "Since our maximum forecasting horizon is 24 hours, we consider that the\n",
+    "future weather data is known at a chosen prediction time. Similarly, the\n",
+    "holidays and calendar features are known at prediction time for any point in\n",
+    "the future.\n",
+    "\n",
+    "Therefore, features derived from the weather and calendar data can be used to\n",
+    "engineer \"future covariates\". Since the load data is our prediction target,\n",
+    "we will can also use it to engineer \"past covariates\" such as lagged features\n",
+    "and rolling aggregations.\n",
     "\n",
     "## Environment setup\n",
     "\n",
@@ -19,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0b7b0d7",
+   "id": "46fb3605",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc20bd7",
+   "id": "e77b16e9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -52,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05fc87eb",
+   "id": "43b3b4f8",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -70,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20dbb8a6",
+   "id": "6634ab39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9825314",
+   "id": "74239423",
    "metadata": {},
    "source": [
     "\n",
@@ -105,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "863d451c",
+   "id": "cc321c31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06c976c8",
+   "id": "cf5a3327",
    "metadata": {},
    "source": [
     "\n",
@@ -128,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0887f52",
+   "id": "21df2e0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4a03a0f",
+   "id": "12d954ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39511776",
+   "id": "2660bc08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f694eab3",
+   "id": "5dd6fc17",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -192,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e8b0c24",
+   "id": "b2d0f25b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -204,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ab52337",
+   "id": "7c4d2484",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "465dc9ff",
+   "id": "b2057608",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a23c142",
+   "id": "a8584e1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c95be50a",
+   "id": "fc22a187",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -277,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cff513c7",
+   "id": "41a81f36",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -294,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1eee654",
+   "id": "c2ee9cdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a935b9c",
+   "id": "d8c87146",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfed774c",
+   "id": "fefb2b35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd2d3686",
+   "id": "d3c47b69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c16dfc7",
+   "id": "006241f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2f6ce10",
+   "id": "890d0652",
    "metadata": {},
    "source": [
     "\n",
@@ -393,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dbf0566",
+   "id": "31779a8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6290b980",
+   "id": "0bfc15da",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -423,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5198da1e",
+   "id": "9388028c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -456,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee9cb608",
+   "id": "fcac4b1a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -465,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "295aae23",
+   "id": "ff8556f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,9 +517,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d45ec2ce",
+   "metadata": {},
+   "source": [
+    "## Investigating outliers in the lagged features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b103db11",
+   "id": "610a0d7a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -512,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "993ed42d",
+   "id": "dbd9acdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0b7d8af",
+   "id": "58a36c09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d662d00",
+   "id": "3c50f821",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -566,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64b22f5d",
+   "id": "77727031",
    "metadata": {},
    "outputs": [],
    "source": []
