--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,12 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "680b05d1",
+   "id": "3ec3e136",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "source": [
     "# Feature engineering for electricity load forecasting\n",
+    "\n",
+    "The purpose of this notebook is to demonstrate how to use `skrub` and `polars`\n",
+    "to perform feature engineering for electricity load forecasting.\n",
+    "\n",
+    "We will build a set of features from different sources:\n",
+    "\n",
+    "- Historical weather data for 10 medium to large urban areas in France;\n",
+    "- Holidays and calendar features for France;\n",
+    "- Historical electricity load data for the whole of France.\n",
+    "\n",
+    "All these data sources cover a time range from March 23, 2021 to May 31, 2025.\n",
+    "\n",
+    "Since our maximum forecasting horizon is 24 hours, we consider that the\n",
+    "future weather data is known at a chosen prediction time. Similarly, the\n",
+    "holidays and calendar features are known at prediction time for any point in\n",
+    "the future.\n",
+    "\n",
+    "Therefore, features derived from the weather and calendar data can be used to\n",
+    "engineer \"future covariates\". Since the load data is our prediction target,\n",
+    "we will can also use it to engineer \"past covariates\" such as lagged features\n",
+    "and rolling aggregations.\n",
     "\n",
     "## Environment setup\n",
     "\n",
@@ -19,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29a3dd91",
+   "id": "89b23971",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -32,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8fb6080",
+   "id": "11557fdf",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -52,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "937cceb6",
+   "id": "5b152fe1",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -70,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6b92b22",
+   "id": "fe79be4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "882a72ba",
+   "id": "1cb2edfa",
    "metadata": {},
    "source": [
     "\n",
@@ -105,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e50ef05b",
+   "id": "5825ffe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3406634",
+   "id": "26cdfe4a",
    "metadata": {},
    "source": [
     "\n",
@@ -128,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b121197",
+   "id": "153ad14f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9051aa6c",
+   "id": "663b5e02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab5aaac5",
+   "id": "9094417e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae7f8a8a",
+   "id": "fc5e8ad8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -192,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32b3a8c3",
+   "id": "0ce91d06",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -204,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99e70ede",
+   "id": "0191b9e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "761e850c",
+   "id": "53c351be",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -243,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4fe70c1",
+   "id": "4009a5e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0f75808",
+   "id": "014a5991",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -277,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc5de56c",
+   "id": "96e022e7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -294,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b3ba445",
+   "id": "4d5c3c54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d62afae8",
+   "id": "d8587bbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f1721af",
+   "id": "7878e8c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83a9d9fb",
+   "id": "b0ef7bbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cc87b0c",
+   "id": "f76de94c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a232f8c",
+   "id": "05803454",
    "metadata": {},
    "source": [
     "\n",
@@ -393,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "142e277a",
+   "id": "491d0c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9a44b9e",
+   "id": "07818687",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -423,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57a0f36a",
+   "id": "17de63c7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -456,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "722e2cf8",
+   "id": "a9ab4c7f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -465,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e1aa8f4",
+   "id": "2507262f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,9 +517,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81ecc9a4",
+   "metadata": {},
+   "source": [
+    "## Investigating outliers in the lagged features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c082ce5",
+   "id": "91278a13",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -512,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "724296ba",
+   "id": "91a5cda6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68470053",
+   "id": "c61f94fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab4086e2",
+   "id": "c69568cc",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -566,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5905506c",
+   "id": "52e2df20",
    "metadata": {},
    "outputs": [],
    "source": []
